try to make CI work

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,8 +1,6 @@
-name: Slash Command Dispatch
+name: CI
 on:
   push:
-  issue_comment:
-    types: [created]
 jobs:
   ci:
     runs-on: ubuntu-22.04
