--- a/.github/workflows/ping-command.yml
+++ b/.github/workflows/ping-command.yml
@@ -6,11 +6,29 @@ jobs:
   helloWorld:
     runs-on: ubuntu-latest
     steps:
-      - name: Update comment
-        uses: peter-evans/create-or-update-comment@v4
-        with:
-          token: ${{ secrets.PAT }}
-          comment-id: ${{ github.event.client_payload.github.payload.comment.id }}
-          body: |
-            >pong ${{ github.event.client_payload.slash_command.args.all }}
-          reactions: hooray
+    - name: Find Comment
+      uses: peter-evans/find-comment@v3
+      id: fc
+      with:
+        issue-number: ${{ github.event.pull_request.number }}
+        comment-author: 'github-actions[bot]'
+        body-includes: This comment was written by a bot!
+
+    - name: Create comment
+      if: steps.fc.outputs.comment-id == ''
+      uses: peter-evans/create-or-update-comment@v4
+      with:
+        issue-number: ${{ github.event.pull_request.number }}
+        body: |
+          This comment was written by a bot!
+        reactions: rocket
+
+    - name: Update comment
+      if: steps.fc.outputs.comment-id != ''
+      uses: peter-evans/create-or-update-comment@v4
+      with:
+        comment-id: ${{ steps.fc.outputs.comment-id }}
+        body: |
+          This comment has been updated!
+          Note: This comment was written by a bot!
+        reactions: hooray
